--- a/ejemplo1/taller2.html
+++ b/ejemplo1/taller2.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <header class="cabecera">
-	<section class="sec1">
-		<h2>NOMBRE DE LA APLICACION</h2>
+	<section >
+		<h1>NOMBRE DE LA APLICACION</h1>
 	</section>
-	<section  class="sec2">
+	<section >
 		<h2>BUSCADOR</h2>
 	</section>
 </header>
@@ -26,34 +26,25 @@
 
 
 <aside class="aside">
-	<section>
-		<h3>Producto1</h3>
-	</section>
-	<section>
-		<h3>Producto 2</h3>
-	</section>
-	<section>
-		<h3>Producto 3 </h3>
-	</section>
-	<section>
-		<h3>Producto 4</h3>
-	</section>
-	<section>
-		<h3>Producto 5</h3>
-	</section>
+		<h3>PRODUCTO</h3>
+		<h3>PRODUCTO</h3>
+		<h3>PRODUCTO</h3>
+		<h3>PRODUCTO</h3>
+</aside>
+
 <main>
 	<article>
 		
 		<section>
-			<h3>Noticia 1</h3>
+			<h3>NOTICIA</h3>
 		</section>
 		<section>
-			<h3>Noticia 2</h3>
+			<h3>NOTICIA</h3>
 		</section>
 	</article>
 </main>
 
-</aside>
+
 <footer>
 	<h6>Derechos reservados UTPL 2018</h6>
 </footer>
